unpackaged/main/default/objects/ia_crm__Other_Sales_Document_Payment__c/ia_crm__Other_Sales_Document_Payment__c.object-meta.xml
<CustomObject>
    <label>Other Sales Document Payment</label>
    <nameField>
        <label>Other Sales Document Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Other Sales Document Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>