unpackaged/main/default/objects/ia_crm__Other_Sales_Document_Payment__c/fields/ia_crm__Other_Sales_Document__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Other_Sales_Document__c</fullName>
    <label>Other Sales Document</label>
    <referenceTo>ia_crm__Other_Sales_Document__c</referenceTo>
    <relationshipLabel>Other Sales Document Payments</relationshipLabel>
    <relationshipName>Other_Sales_Document_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>