unpackaged/main/default/objects/ia_crm__Other_Sales_Document_Payment__c/fields/ia_crm__Posting_Date__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Posting_Date__c</fullName>
    <label>Posting Date</label>
    <type>Date</type>
</CustomField>